--- a/components/footer.html
+++ b/components/footer.html
@@ -11,12 +11,12 @@
                         </a>
                     </li>
                     <li class="me-3">
-                        <a class="text-light" href="https://www.instagram.com/deluxocom" target="_blank" aria-label="Instagram">
+                        <a class="text-light" href="https://deluxo.com/#instagram" target="_blank" aria-label="Instagram">
                             <i class="bi bi-instagram fs-5"></i>
                         </a>
                     </li>
                     <li>
-                        <a class="text-light" href="https://www.linkedin.com/company/deluxocom" target="_blank" aria-label="LinkedIn">
+                        <a class="text-light" href="https://deluxo.com/#linkedin" target="_blank" aria-label="LinkedIn">
                             <i class="bi bi-linkedin fs-5"></i>
                         </a>
                     </li>
